--- a/Portfólio/index.html
+++ b/Portfólio/index.html
@@ -71,7 +71,7 @@
                     <div class="work">
                         <img src="img Projetos/67.jpg">
                         <div class="layer">
-                            <h1>Midias Sociais</h1>
+                            <h1>PortalGamerX</h1>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam voluptas, voluptatem
                                 quia placeat consectetur atque aperiam laboriosam dolor fugit doloremque, magni fuga vel
@@ -86,7 +86,7 @@
                     <div class="work">
                         <img src="img Projetos/34.jpg">
                         <div class="layer">
-                            <h1>App musica</h1>
+                            <h1>EcoProteção</h1>
                             <p>
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit, perferendis. Facere repellat
                                 nulla esse dolores libero aut suscipit neque quibusdam eveniet quis, modi maiores veniam
