--- a/PortalGamerX/PortalGamerX.com.html
+++ b/PortalGamerX/PortalGamerX.com.html
@@ -76,12 +76,16 @@
                 <div class="slide">
                     <img src="Horizon.jpg" alt="Imagem do slide 3">
                 </div>
+                <div class="slide">
+                    <img src="tlous.jpg" alt="Imagem do slide 4">
+                </div>
                 <!-- Adicionar mais slides -->
             </div>
             <div class="dots">
                 <span class="dot" data-slide="0"></span>
                 <span class="dot" data-slide="1"></span>
                 <span class="dot" data-slide="2"></span>
+                <span class="dot" data-slide="3"></span>
                 <!-- Adicionar mais bolinhas se houver mais slides -->
             </div>
         </div>
