--- a/PortalGamerX/PortalGamerX.com.html
+++ b/PortalGamerX/PortalGamerX.com.html
@@ -47,7 +47,9 @@
         </nav>
     </header>
 
-    <input class="Pesquisar" type="text"> 
+    <div class="container">
+        <input class="Pesquisar" type="text" placeholder="Pesquisar...">
+      </div>
 
 
     <ul class="image-list">
@@ -119,11 +121,12 @@
                     <li class="Lista"><a href="#">Apex Legends</a></li>
                     <li class="Lista"><a href="#">Fortnite</a></li>
                     <li class="Lista"><a href="#">CS:GO</a></li>
-                    <li class="Lista"><a href="#">Rainbow Six: Siege</a></li>
+                    <li class="Lista"><a href="#">Assassin's Creed</a></li>
                     <li class="Lista"><a href="#">Call of Duty Warzone</a></li>
-                    <li class="Lista"><a href="#">Crazy Racing Kartrider</a></li>
+                    <li class="Lista"><a href="#">Disney Speedstorm</a></li>
                     <li class="Lista"><a href="#">GTA 5</a></li>
                     <li class="Lista"><a href="#">FIFA 23</a></li>
+                    <li class="Lista"><a href="#">Horizon Zero Down</a></li>
                 </ul>
                 <ul>
                     <li class="Lista">JOGOS POR CONSOLES</li>
@@ -137,6 +140,8 @@
             </div>
         </article>
     </aside>
+
+    
 
     <script src="script.js"></script>
 </body>
